--- a/.github/workflows/build-nrf52.yml
+++ b/.github/workflows/build-nrf52.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        board: ["adafruit_feather_nrf52840", "seeed_xiao_nrf52840"]
+        board: ["adafruit_feather_nrf52840", "seeed_xiao_nrf52840", "raytac_mdbt50q_rx"]
     steps:
       - uses: actions/checkout@v3
       - name: Build
